...
    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/sport"
        android:title="Sport" />

    <item
        android:id="@+id/navigation_crous"
        android:icon="@drawable/crous"
        android:title="Crous" />

    <item
        android:id="@+id/navigation_biblio"
        android:icon="@drawable/bu"
        android:title="BU" />

...
