<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:fontFamily="@font/alice"
        android:gravity="center"
        android:text="Disponibilité de ce produit"
        android:textColor="#E40E1F"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:background="@android:color/holo_green_light"
            android:text="Disponible"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/buttonko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:background="@android:color/holo_red_dark"
            android:text="Épuisé"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
