...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonfaible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:background="@android:color/holo_green_light"
            android:text="Faible"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonmoyenne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
