...
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/colorPrimary"
...
